--- a/package.json
+++ b/package.json
@@ -3,12 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
+    "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
+    "ityped": "^1.0.3",
+    "mapbox-gl": "^2.5.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-parallax": "^3.3.0",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "styled-components": "^5.3.1",
+    "swiper": "^7.0.8",
+    "tsparticles": "^1.35.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
